k8s/backend-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-ui
spec:
  selector:
    app: backend-ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
