k8s/opensearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch-cluster-master
spec:
  selector:
    app: opensearch
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
